--- a/projeto1-style.css
+++ b/projeto1-style.css
@@ -6,12 +6,44 @@
 
 body {
   font-family: 'Muli', sans-serif;
+  margin: 0;
+}
+
+.section{
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  margin: 0;
+}
+
+h1 {
+  text-align: center;
+}
+
+.header {
+  background-color: #ffffff;
+  padding: 0px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+}
+
+  .menu-icon {
+  display: block;
+  text-align: right;
+  padding: 50px;
+  font-size: 30px;
 }
 
 .container {
