update name class

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ nav ul li a.btn {
     border-radius: 5px; /* Bordas arredondadas */
 }
 
-/* Estilos para a seção hero */
+/* Estilos para a seção apresentacao */
 .apresentacao {
     text-align: center; /* Centraliza o texto */
     padding: 100px; /* Espaçamento interno */
